Fix layout issue with two sections

--- a/sunnyside-agency-landing-page-main/src/styles.css
+++ b/sunnyside-agency-landing-page-main/src/styles.css
@@ -391,7 +391,7 @@ a:hover {
 	#stand-out {
 		display: flex;
 	}
-	#stand-out {
+	#transform {
 		flex-flow: row-reverse nowrap;
 	}
 	#transform .row-image,
